--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 <my-app>loading</my-app>
   </body>
 </html>
